# intrusive-linked-list

./: CMakeLists.txt  README.md  double_demo.c  double_intrusive_linked_list.c  double_intrusive_linked_list.h  macros.h  single_demo.c  single_intrusive_linked_list.c  single_intrusive_linked_list.h
include/: data.h  double_intrusive_linked_list.h  single_intrusive_linked_list.h
src/: double_intrusive_linked_list.c  single_intrusive_linked_list.c
test/: double_demo.c  single_demo.c
